src/test/custom/invalid/libNotFound/libNotFound.wacc
include Sth

begin
  skip
end